--- a/web/sf-assessment/package.json
+++ b/web/sf-assessment/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "circular-json": "^0.5.9",
     "dayjs": "^1.11.8",
     "ngx-perfect-scrollbar": "^10.1.1",
     "perfect-scrollbar": "^1.5.5",
     "rxjs": "~7.8.0",
+    "signature_pad": "^4.1.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
