--- a/DockerfileBackend
+++ b/DockerfileBackend
@@ -11,7 +11,7 @@ ENV PYTHONUNBUFFERED 1
 RUN python -m pip install --upgrade pip
 
 # Install Flask project dependencies
-RUN pip3 install -r requirements.txt
+RUN pip3 install  --no-cache-dir -r requirements.txt
 
 ENTRYPOINT ["python3"]
 
